headlamp/ing_headlamp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    octodns-kubernetes.rybni.co/hostname: k8s-dashboard.klopfi.net
  name: headlamp
  namespace: headlamp
spec:
  ingressClassName: nginx
  rules:
  - host: k8s-dashboard.klopfi.net
    http:
      paths:
      - backend:
          service:
            name: headlamp
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - k8s-dashboard.klopfi.net
    secretName: ingress-server-tls
